sandbox/output
TicketDispenserTest.java:38: error: cannot find symbol
        mockSequence.arrangeNextTurnNumber(59);
                    ^
  symbol:   method arrangeNextTurnNumber(int)
  location: variable mockSequence of type MockTurnNumberSequence
TicketDispenserTest.java:39: error: constructor TicketDispenser in class TicketDispenser cannot be applied to given types;
        TicketDispenser dispenser = new TicketDispenser(mockSequence);
                                    ^
  required: no arguments
  found: MockTurnNumberSequence
  reason: actual and formal argument lists differ in length
2 errors
